Fix logout alignment bug

--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -27,6 +27,7 @@
 .linkList {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .linkList > * {
@@ -36,7 +37,7 @@
 .logout {
     cursor: pointer;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .logoutIcon {
